perf(L1): migrate Lucene 3.5.0 → 9.10.0
- Bump lucene.version 3.5.0 → 9.10.0 in root and store pom.xml
- Replace lucene-analyzers + lucene-smartcn with lucene-analysis-common
  and lucene-queryparser
- Drop LuceneDirectory (byte counting broken for mmap; API incompatible)
- Drop TermsFilter (Filter removed in Lucene 5.x); replace with
  TermInSetQuery folded into BooleanQuery.FILTER clauses
- Drop LuceneIndexRepair (uses internal 3.5 APIs)
- Default to MMapDirectory (JDK 21 + --enable-native-access already set
  → Panama MemorySegment zero-copy reads)
- Detect legacy 3.5 index format at startup (.frq/.prx/.tii/.tis files)
  and wipe + schedule background reindex
- Migrate all analysis/ tokenizers/filters/analyzers to Lucene 9.x API:
  CharTokenizer.isTokenChar(int), createComponents(String), no-arg
  constructors, NormalizeCharMap.Builder, CharArraySet for stop words
- Migrate IndexWriter/IndexReader to DirectoryReader.open(),
  IndexWriterConfig(analyzer) (no Version), TieredMergePolicy,
  ConcurrentMergeScheduler with updated merge() signature
- Migrate TermEnum → TermsEnum via MultiTerms, TermDocs → PostingsEnum
- Migrate BooleanQuery to immutable Builder pattern
- Migrate PhraseQuery and MultiPhraseQuery to Builder pattern
- Migrate Field constructors to StringField/TextField
- Migrate Fieldable → IndexableField throughout
- Fix SortField.STRING → SortField.Type.STRING
- Fix BooleanQuery.setMaxClauseCount → IndexSearcher.setMaxClauseCount
- Fix QueryParser package: queryParser → queryparser.classic
- Fix ZimbraTopDocs/ZimbraTopFieldDocs: totalHits.value (TotalHits obj)
- Fix KeywordTokenizer import: core.KeywordTokenizer
- Fix NumericUtils.intToPrefixCoded → String.format for field encoding
- Apply NormalizeTokenFilter as CharFilter for addr/filename tokenizers
  (normalize() removed from util.CharTokenizer in 9.x)